After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710110 - multiudpsink: Leaks GstMemories when flushing
multiudpsink: Leaks GstMemories when flushing
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.2.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-14 14:25 UTC by Ognyan Tonchev (redstar_)
Modified: 2013-10-15 09:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
unmap all memory in flushing (752 bytes, patch)
2013-10-14 14:25 UTC, Ognyan Tonchev (redstar_)
committed Details | Review

Description Ognyan Tonchev (redstar_) 2013-10-14 14:25:23 UTC
Created attachment 257261 [details] [review]
unmap all memory in flushing

multiudpsink leaks GstBuffer memory blocks when flushing
Comment 1 Sebastian Dröge (slomo) 2013-10-14 16:22:29 UTC
commit c81ce6b15250f63eeb82a2f2769ad7db52f613cc
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Mon Oct 14 16:23:25 2013 +0200

    multiudpsink: Fix memory leak
    
    Unmap all GstMemory of the current buffer when flushing.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=710110